BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -48,6 +48,24 @@
   file = {/Users/werner/Zotero/storage/8NUI67KR/Hevner et al. - 2018 - A pragmatic approach for identifying and managing .pdf}
 }
 
+@incollection{DSRIntroDesignScience2020,
+  title = {Introduction to {{Design Science Research}}},
+  booktitle = {Design {{Science Research}}. {{Cases}}},
+  author = {vom Brocke, Jan and Hevner, Alan and Maedche, Alexander},
+  editor = {vom Brocke, Jan and Hevner, Alan and Maedche, Alexander},
+  options = {useprefix=true},
+  date = {2020},
+  series = {Progress in {{IS}}},
+  pages = {1--13},
+  publisher = {{Springer International Publishing}},
+  location = {{Cham}},
+  doi = {10.1007/978-3-030-46781-4_1},
+  url = {http://link.springer.com/10.1007/978-3-030-46781-4_1},
+  urldate = {2023-03-06},
+  isbn = {978-3-030-46780-7 978-3-030-46781-4},
+  langid = {english}
+}
+
 @misc{EN50600-1,
   title = {{{EN}} 50600-1:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Allgemeine Konzepte}}},
   author = {Technisches Komitee CLC/TC 215 "Elektrotechnische Aspekte von Telekommunikationseinrichtungen"},
@@ -132,24 +150,6 @@
   title = {{{EN IEC}} 62443-3-3:2019 + {{AC}}:2019, Industrielle Kommunikationsnetze - {{IT-Sicherheit}} Für Netze Und Systeme - Teil 3-3: {{Systemanforderungen}} Zur {{IT-Sicherheit}} Und Security-Level ({{IEC}} 52443-3-3:2013 + {{COR1}}:2014)},
   author = {{IEC - International Electrotechnical Commission}},
   date = {2019}
-}
-
-@incollection{IntroDesignScience2020,
-  title = {Introduction to {{Design Science Research}}},
-  booktitle = {Design {{Science Research}}. {{Cases}}},
-  author = {vom Brocke, Jan and Hevner, Alan and Maedche, Alexander},
-  editor = {vom Brocke, Jan and Hevner, Alan and Maedche, Alexander},
-  options = {useprefix=true},
-  date = {2020},
-  series = {Progress in {{IS}}},
-  pages = {1--13},
-  publisher = {{Springer International Publishing}},
-  location = {{Cham}},
-  doi = {10.1007/978-3-030-46781-4_1},
-  url = {http://link.springer.com/10.1007/978-3-030-46781-4_1},
-  urldate = {2023-03-06},
-  isbn = {978-3-030-46780-7 978-3-030-46781-4},
-  langid = {english}
 }
 
 @online{ISO27000,
