BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -140,6 +140,13 @@
   file = {/Users/werner/Zotero/storage/UMSA5766/Guo et al. - 2021 - Enhance Enterprise Security through Implementing I.pdf}
 }
 
+@article{hevnerDesignScienceInformation,
+  title = {Design {{Science}} in {{Information Systems Research}}},
+  author = {Hevner, Alan R and March, Salvatore T and Park, Jinsoo and Ram, Sudha},
+  langid = {english},
+  file = {/Users/werner/Zotero/storage/QGV9PY36/Hevner et al. - Design Science in Information Systems Research.pdf}
+}
+
 @misc{IEC_62443-2-1,
   title = {{{EN IEC}} 62443-2-1, {{Security}} for Industrial Automation and Control Systems - {{Part}} 2-1: {{Security}} Program Requirements for {{IACS}} Asset Owners ({{IEC}} 65/756/{{CDV}})},
   author = {{IEC - International Electrotechnical Commission}},
