BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -60,6 +60,7 @@
 @article{DSRhevnerDesignScienceInformationSys,
   title = {Design {{Science}} in {{Information Systems Research}}},
   author = {Hevner, Alan R and March, Salvatore T and Park, Jinsoo and Ram, Sudha},
+  date = {2004},
   langid = {english},
   file = {/Users/werner/Zotero/storage/QGV9PY36/Hevner et al. - Design Science in Information Systems Research.pdf}
 }
