--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -61,6 +61,7 @@
   title = {Design {{Science}} in {{Information Systems Research}}},
   author = {Hevner, Alan R and March, Salvatore T and Park, Jinsoo and Ram, Sudha},
   date = {2004},
+  shortjournal = {MIS Quarterly},
   volume = {28},
   pages = {75--105},
   langid = {english},
