--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -44,6 +44,7 @@
   author = {Hevner, Alan R and March, Salvatore T and Park, Jinsoo and Ram, Sudha},
   date = {2004},
   shortjournal = {MIS Quarterly},
+  series = {Management {{Information Systems Quarterly}}},
   volume = {28},
   pages = {75--105},
   langid = {english},
