--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -273,6 +273,15 @@
   file = {/Users/werner/Zotero/storage/ECB772EW/OENORM_A_7700-4_2019_10_01.html}
 }
 
+@article{peffersDesignScienceResearch2007,
+  title = {A Design Science Research Methodology for Information Systems Research},
+  author = {Peffers, Ken and Tuunanen, Tuure and Rothenberger, Marcus and Chatterjee, S.},
+  date = {2007-01},
+  journaltitle = {Journal of Management Information Systems},
+  volume = {24},
+  pages = {45--77}
+}
+
 @legislation{RichtlinieEU20162016,
   title = {Richtlinie (EU) 2016/1148 des Europäischen Parlaments und des Rates vom 6. Juli 2016 über Maßnahmen zur Gewährleistung eines hohen gemeinsamen Sicherheitsniveaus von Netz- und Informationssystemen in der Union},
   date = {2016-07-06},
