BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -102,15 +102,7 @@
   file = {/Users/werner/Zotero/storage/HDY83NGQ/OVE_EN_50600-2-5_2021_10_01.html}
 }
 
-@article{Fluchsot,
-  title = {{{OT-Security}} von Der Norm Ins Leitsystem},
-  author = {Fluchs, Sarah und Rudolph, Heiko},
-  date = {2018},
-  journaltitle = {DACH Security 2018},
-  pages = {276--286}
-}
-
-@online{GuidelinesAssessingDSP,
+@online{ENISA_GuidelinesAssessingOES,
   type = {Report/Study},
   title = {Guidelines on Assessing {{DSP}} Security and {{OES}} Compliance with the {{NISD}} Security Requirements},
   url = {https://www.enisa.europa.eu/publications/guidelines-on-assessing-dsp-security-and-oes-compliance-with-the-nisd-security-requirements},
@@ -119,6 +111,14 @@
   langid = {english},
   organization = {{ENISA}},
   file = {/Users/werner/Zotero/storage/CFK53ZJL/Guidelines on assessing DSP security and OES compl.pdf;/Users/werner/Zotero/storage/ZIJ6FHG9/guidelines-on-assessing-dsp-security-and-oes-compliance-with-the-nisd-security-requirements.html}
+}
+
+@article{Fluchsot,
+  title = {{{OT-Security}} von Der Norm Ins Leitsystem},
+  author = {Fluchs, Sarah und Rudolph, Heiko},
+  date = {2018},
+  journaltitle = {DACH Security 2018},
+  pages = {276--286}
 }
 
 @inproceedings{guoEnhanceEnterpriseSecurity2021,
