BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -105,6 +105,8 @@
 @online{ENISA_GuidelinesAssessingOES,
   type = {Report/Study},
   title = {Guidelines on Assessing {{DSP}} Security and {{OES}} Compliance with the {{NISD}} Security Requirements},
+  author = {ENISA},
+  date = {2018-11},
   url = {https://www.enisa.europa.eu/publications/guidelines-on-assessing-dsp-security-and-oes-compliance-with-the-nisd-security-requirements},
   urldate = {2023-03-12},
   abstract = {This report presents the steps of an information security audit process for the OES compliance, as well as of a self-assessment/ management framework for the DSP security against the security requirements set by the NIS Directive. In addition, it provides an analysis of the most relevant information security standards and frameworks to support OES and DSP in practicing the above exercises in the most tailored and efficient manner.},
