BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -105,7 +105,7 @@
 @online{ENISA_GuidelinesAssessingOES,
   type = {Report/Study},
   title = {Guidelines on Assessing {{DSP}} Security and {{OES}} Compliance with the {{NISD}} Security Requirements},
-  author = {ENISA},
+  author = {European Union Agency For Network {and} Information Security (ENISA)},
   date = {2018-11},
   url = {https://www.enisa.europa.eu/publications/guidelines-on-assessing-dsp-security-and-oes-compliance-with-the-nisd-security-requirements},
   urldate = {2023-03-12},
