--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -352,6 +352,28 @@
   file = {/Users/werner/Zotero/storage/GFCSCWVI/Roy - 2020 - A High-Level Comparison between the NIST Cyber Sec.pdf}
 }
 
+@incollection{venableComprehensiveFrameworkEvaluation2012,
+  title = {A {{Comprehensive Framework}} for {{Evaluation}} in {{Design Science Research}}},
+  booktitle = {Design {{Science Research}} in {{Information Systems}}. {{Advances}} in {{Theory}} and {{Practice}}},
+  author = {Venable, John and Pries-Heje, Jan and Baskerville, Richard},
+  editor = {Peffers, Ken and Rothenberger, Marcus and Kuechler, Bill},
+  date = {2012},
+  series = {Lecture {{Notes}} in {{Computer Science}}},
+  volume = {7286},
+  pages = {423--438},
+  publisher = {{Springer Berlin Heidelberg}},
+  location = {{Berlin, Heidelberg}},
+  doi = {10.1007/978-3-642-29863-9_31},
+  url = {http://link.springer.com/10.1007/978-3-642-29863-9_31},
+  urldate = {2023-03-12},
+  abstract = {Evaluation is a central and essential activity in conducting rigorous Design Science Research (DSR), yet there is surprisingly little guidance about designing the DSR evaluation activity beyond suggesting possible methods that could be used for evaluation. This paper extends the notable exception of the existing framework of Pries-Heje et al [11] to address this problem. The paper proposes an extended DSR evaluation framework together with a DSR evaluation design method that can guide DSR researchers in choosing an appropriate strategy for evaluation of the design artifacts and design theories that form the output from DSR. The extended DSR evaluation framework asks the DSR researcher to consider (as input to the choice of the DSR evaluation strategy) contextual factors of goals, conditions, and constraints on the DSR evaluation, e.g. the type and level of desired rigor, the type of artifact, the need to support formative development of the designed artifacts, the properties of the artifact to be evaluated, and the constraints on resources available, such as time, labor, facilities, expertise, and access to research subjects. The framework and method support matching these in the first instance to one or more DSR evaluation strategies, including the choice of ex ante (prior to artifact construction) versus ex post evaluation (after artifact construction) and naturalistic (e.g., field setting) versus artificial evaluation (e.g., laboratory setting). Based on the recommended evaluation strategy(ies), guidance is provided concerning what methodologies might be appropriate within the chosen strategy(ies).},
+  editorb = {Hutchison, David and Kanade, Takeo and Kittler, Josef and Kleinberg, Jon M. and Mattern, Friedemann and Mitchell, John C. and Naor, Moni and Nierstrasz, Oscar and Pandu Rangan, C. and Steffen, Bernhard and Sudan, Madhu and Terzopoulos, Demetri and Tygar, Doug and Vardi, Moshe Y. and Weikum, Gerhard},
+  editorbtype = {redactor},
+  isbn = {978-3-642-29862-2 978-3-642-29863-9},
+  langid = {english},
+  file = {/Users/werner/Zotero/storage/38TFSFAV/Venable et al. - 2012 - A Comprehensive Framework for Evaluation in Design.pdf}
+}
+
 @incollection{zotero-367,
   type = {incollection}
 }
