BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -36,6 +36,24 @@
   file = {/Users/werner/Zotero/storage/EFU7FAFI/_.pdf}
 }
 
+@article{davisPerceivedUsefulnessPerceived1989,
+  title = {Perceived {{Usefulness}}, {{Perceived Ease}} of {{Use}}, and {{User Acceptance}} of {{Information Technology}}},
+  author = {Davis, Fred D.},
+  date = {1989-09},
+  journaltitle = {MIS Quarterly},
+  shortjournal = {MIS Quarterly},
+  volume = {13},
+  number = {3},
+  eprint = {249008},
+  eprinttype = {jstor},
+  pages = {319},
+  issn = {02767783},
+  doi = {10.2307/249008},
+  abstract = {Validmeasurement scales for predicting user acceptance of computers are in short supply. Most subjective measures used in practice are unvalidated, and their relationship to system usage is unknown. The present research develops and validates new scales for two specific variables, perceived usefulness and perceived ease of use, which are hypothesized to be fundamental determinants of user acceptance. Definitionsfor these two variables were used to develop scale items thatwerepretested forcontent validityand then tested forreliability and construct validityin two studies involving a total of 152 users and four applicationprograms. Themeasures were refinedand streamlined, resultingin two six-itemscales withreliabilities of .98 for usefulness and .94 for ease of use. The scales exhibited high convergent, discriminanta,nd factoriavl alidityP. erceivedusefulnesswas significantlycorrelatedwithbothselfreported current usage (r=.63, Study 1) and self-predictedfutureusage (r=.85, Study2). Perceived ease of use was also significantlycorrelated withcurrentusage (r=.45, Study 1) and futureusage (r=.59, Study 2). In both studies, usefulness had a significantlygreater correlation withusage behaviorthan did ease of use. Regression analyses suggest that perceived ease of use may actually be a causal antecedent to perceived usefulness, as opposed to a parallel,direct determinantof system usage. Implicationsare drawn for futureresearch on user acceptance.},
+  langid = {english},
+  file = {/Users/werner/Zotero/storage/CSNGHF2F/Davis - 1989 - Perceived Usefulness, Perceived Ease of Use, and U.pdf}
+}
+
 @inproceedings{DSR_AModelAssessingCOBIT2018andISO27001,
   title = {A {{Model}} for {{Assessing COBIT}} 5 and {{ISO}} 27001 {{Simultaneously}}},
   booktitle = {2018 {{IEEE}} 20th {{Conference}} on {{Business Informatics}} ({{CBI}})},
