--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -258,6 +258,15 @@
   file = {/Users/werner/Zotero/storage/9W54XG65/OENORM_EN_ISO_27799_2016_12_15.html}
 }
 
+@report{ISOIECIEEE,
+  title = {{{ISO}}/{{IEC}}/{{IEEE International Standard}} - {{Systems}} and Software Engineering--{{Vocabulary}}},
+  institution = {{IEEE}},
+  doi = {10.1109/IEEESTD.2017.8016712},
+  url = {https://ieeexplore.ieee.org/document/8016712/},
+  urldate = {2023-03-13},
+  isbn = {9781504441186}
+}
+
 @misc{KSOE,
   title = {Cyber {{Risk Rating}} \& {{Cyber Trust Label}}, {{Schema Policy}} 2023 {{Version}} 3},
   author = {Kompetenzzentrum Sicheres Österreich and Cyber Trust Austria},
