--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -264,7 +264,8 @@
   doi = {10.1109/IEEESTD.2017.8016712},
   url = {https://ieeexplore.ieee.org/document/8016712/},
   urldate = {2023-03-13},
-  isbn = {9781504441186}
+  isbn = {9781504441186},
+  file = {/Users/werner/Zotero/storage/A4PXYWWD/getPDF.pdf}
 }
 
 @misc{KSOE,
