BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -192,6 +192,16 @@
   date = {2019}
 }
 
+@report{ISO_DSR_Systems_and_software_engineering,
+  title = {{{ISO}}/{{IEC}}/{{IEEE International Standard}} - {{Systems}} and Software Engineering--{{Vocabulary}}},
+  institution = {{IEEE}},
+  doi = {10.1109/IEEESTD.2017.8016712},
+  url = {https://ieeexplore.ieee.org/document/8016712/},
+  urldate = {2023-03-13},
+  isbn = {9781504441186},
+  file = {/Users/werner/Zotero/storage/A4PXYWWD/getPDF.pdf}
+}
+
 @online{ISO27000,
   title = {{{EN ISO}}/{{IEC}} 27000:2020, {{Informationstechnik}} - {{Sicherheitsverfahren}}, {{Informationssicherheitsmanagementsysteme}} - {{Überblick}} Und {{Terminologie}}},
   author = {ISO - International Organization for Standardization and IEC - International Electrotechnical Commission},
@@ -256,16 +266,6 @@
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/588816/OENORM_EN_ISO_27799_2016_12_15},
   urldate = {2023-02-22},
   file = {/Users/werner/Zotero/storage/9W54XG65/OENORM_EN_ISO_27799_2016_12_15.html}
-}
-
-@report{ISOIECIEEE,
-  title = {{{ISO}}/{{IEC}}/{{IEEE International Standard}} - {{Systems}} and Software Engineering--{{Vocabulary}}},
-  institution = {{IEEE}},
-  doi = {10.1109/IEEESTD.2017.8016712},
-  url = {https://ieeexplore.ieee.org/document/8016712/},
-  urldate = {2023-03-13},
-  isbn = {9781504441186},
-  file = {/Users/werner/Zotero/storage/A4PXYWWD/getPDF.pdf}
 }
 
 @misc{KSOE,
