--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -194,6 +194,8 @@
 
 @report{ISO_DSR_Systems_and_software_engineering,
   title = {{{ISO}}/{{IEC}}/{{IEEE International Standard}} - {{Systems}} and Software Engineering--{{Vocabulary}}},
+  date = {2017},
+  pages = {1--541},
   institution = {{IEEE}},
   doi = {10.1109/IEEESTD.2017.8016712},
   url = {https://ieeexplore.ieee.org/document/8016712/},
