BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -8,6 +8,24 @@
   urldate = {2022-10-01}
 }
 
+@inproceedings{bondiCharacteristicsScalabilityTheir2000,
+  title = {Characteristics of Scalability and Their Impact on Performance},
+  booktitle = {Proceedings of the 2nd International Workshop on {{Software}} and Performance},
+  author = {Bondi, André B.},
+  date = {2000-09},
+  pages = {195--203},
+  publisher = {{ACM}},
+  location = {{Ottawa Ontario Canada}},
+  doi = {10.1145/350391.350432},
+  url = {https://dl.acm.org/doi/10.1145/350391.350432},
+  urldate = {2023-03-13},
+  abstract = {Scalability is a desirable attribute of a network, system, or process. Poor scalability can result in poor system performance, necessitating the reengineering or duplication of systems. While scalability is valued, its characteristics and the characteristics that undermine it are usually only apparent from the context. Here, we attempt to define different aspects of scalability, such as structural scalability and load scalability. Structural scalability is the ability of a system to expand in a chosen dimension without major modifications to its architecture. Load scalability is the ability of a system to perform gracefully as the offered traffic increases. It is argued that systems with poor load scalability may exhibit it because they repeatedly engage in wasteful activity, because they are encumbered with poor scheduling algorithms, because they cannot fully take advantage of parallelism, or because they are algorithmically inefficient. We qualitatively illustrate these concepts with classical examples from the literature of operating systems and local area networks, as well as an example of our own. Some of these are accompanied by rudimentary delay analysis.},
+  eventtitle = {{{WOSP00}}: 2nd {{International Workshop}} on {{Software}} and {{Performance}}},
+  isbn = {978-1-58113-195-6},
+  langid = {english},
+  file = {/Users/werner/Zotero/storage/KCRIT59G/Bondi - 2000 - Characteristics of scalability and their impact on.pdf}
+}
+
 @incollection{BRO_DSRIntroDesignScience2020,
   title = {Introduction to {{Design Science Research}}},
   booktitle = {Design {{Science Research}}. {{Cases}}},
