--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -453,6 +453,10 @@
   type = {incollection}
 }
 
+@misc{zotero-396,
+  file = {/Users/werner/Zotero/storage/D8IQKJLE/reference_document_security_measures_0040C183-FF20-ECC4-A3D11FA2A80DAAC6_53643.pdf}
+}
+
 @report{ZVEI_Orientierungsleitfaden_IEC_62443,
   title = {Orientierungsleitfaden Für Hersteller Zur {{IEC}} 62443},
   author = {ZVEI - Zentralverband Elektrotechnik- und Elektronikindustrie e.V., Fachverband Automation},
