BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -312,6 +312,10 @@
   institution = {{ABB Automation Products GmbH, Heidelberg}}
 }
 
+@misc{NIS_CooperationGroup_Security_Measures,
+  file = {/Users/werner/Zotero/storage/D8IQKJLE/reference_document_security_measures_0040C183-FF20-ECC4-A3D11FA2A80DAAC6_53643.pdf}
+}
+
 @misc{OEISHB,
   title = {Österreichisches {{Informationssicherheitshandbuch}}},
   author = {A-SIT and Bundeskanzleramt},
@@ -451,10 +455,6 @@
 
 @incollection{zotero-367,
   type = {incollection}
-}
-
-@misc{zotero-396,
-  file = {/Users/werner/Zotero/storage/D8IQKJLE/reference_document_security_measures_0040C183-FF20-ECC4-A3D11FA2A80DAAC6_53643.pdf}
 }
 
 @report{ZVEI_Orientierungsleitfaden_IEC_62443,
