--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -313,6 +313,8 @@
 }
 
 @misc{NIS_CooperationGroup_Security_Measures,
+  author = {NIS Cooperation Group},
+  date = {2018-02},
   file = {/Users/werner/Zotero/storage/D8IQKJLE/reference_document_security_measures_0040C183-FF20-ECC4-A3D11FA2A80DAAC6_53643.pdf}
 }
 
