BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -316,6 +316,8 @@
   title = {Reference Document on Security Measures for {{Operators}} of {{Essential Services}}},
   author = {NIS Cooperation Group},
   date = {2018-02},
+  url = {https://ec.europa.eu/information_society/newsroom/image/document/2018-30/reference_document_security_measures_0040C183-FF20-ECC4-A3D11FA2A80DAAC6_53643.pdf},
+  urldate = {2023-03-14},
   file = {/Users/werner/Zotero/storage/D8IQKJLE/reference_document_security_measures_0040C183-FF20-ECC4-A3D11FA2A80DAAC6_53643.pdf}
 }
 
