BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -90,6 +90,24 @@
   file = {/Users/werner/Zotero/storage/CSNGHF2F/Davis - 1989 - Perceived Usefulness, Perceived Ease of Use, and U.pdf}
 }
 
+@inproceedings{drivasNISDirectiveCompliant2020,
+  title = {A {{NIS Directive Compliant Cybersecurity Maturity Assessment Framework}}},
+  booktitle = {2020 {{IEEE}} 44th {{Annual Computers}}, {{Software}}, and {{Applications Conference}} ({{COMPSAC}})},
+  author = {Drivas, George and Chatzopoulou, Argyro and Maglaras, Leandros and Lambrinoudakis, Costas and Cook, Allan and Janicke, Helge},
+  date = {2020-07},
+  pages = {1641--1646},
+  publisher = {{IEEE}},
+  location = {{Madrid, Spain}},
+  doi = {10.1109/COMPSAC48688.2020.00-20},
+  url = {https://ieeexplore.ieee.org/document/9202470/},
+  urldate = {2023-03-15},
+  abstract = {The EU NIS Directive introduces obligations related to the security of the network and information systems for Operators of Essential Services and for Digital Service Providers. Moreover, National Competent Authorities for cybersecurity are required to assess compliance with these obligations. This paper describes a novel Cybersecurity Maturity Assessment Framework (CMAF) that is tailored to the NIS Directive requirements. CMAF can be used either as a self-assessment tool from Operators of Essential Services and Digital Service Providers or as an audit tool from the National Competent Authorities for cybersecurity.},
+  eventtitle = {2020 {{IEEE}} 44th {{Annual Computers}}, {{Software}}, and {{Applications Conference}} ({{COMPSAC}})},
+  isbn = {978-1-72817-303-0},
+  langid = {english},
+  file = {/Users/werner/Zotero/storage/XKMFT8R8/Drivas et al. - 2020 - A NIS Directive Compliant Cybersecurity Maturity A.pdf}
+}
+
 @misc{EN50600-1,
   title = {{{EN}} 50600-1:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Allgemeine Konzepte}}},
   author = {Technisches Komitee CLC/TC 215 "Elektrotechnische Aspekte von Telekommunikationseinrichtungen"},
