BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -323,6 +323,15 @@
   file = {/Users/werner/Zotero/storage/ALNQPXJN/cyber-trust-austria.html}
 }
 
+@online{MinimumSecurityMeasures,
+  type = {MSM\_OES Tool},
+  title = {Minimum {{Security Measures}} for {{Operators}} of {{Essentials Services}}},
+  url = {https://www.enisa.europa.eu/topics/cybersecurity-policy/nis-directive-new/minimum-security-measures-for-operators-of-essentials-services},
+  urldate = {2023-03-16},
+  langid = {english},
+  organization = {{ENISA}}
+}
+
 @report{Niemann2021abgrenzung,
   title = {Abgrenzung Der {{IT-Sicherheitsnormenreihen ISO}} 27000 Und {{IEC}} 62443: Eine Sicht Auf Automatisierungstechnische Anlagen Der Fertigungs-Und Prozessindustrie},
   author = {Niemann, Karl-Heinz},
