BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -329,7 +329,8 @@
   url = {https://www.enisa.europa.eu/topics/cybersecurity-policy/nis-directive-new/minimum-security-measures-for-operators-of-essentials-services},
   urldate = {2023-03-16},
   langid = {english},
-  organization = {{ENISA}}
+  organization = {{ENISA}},
+  file = {/Users/werner/Zotero/storage/VKIMAL5X/minimum-security-measures-for-operators-of-essentials-services.html}
 }
 
 @report{Niemann2021abgrenzung,
