--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -323,16 +323,6 @@
   file = {/Users/werner/Zotero/storage/ALNQPXJN/cyber-trust-austria.html}
 }
 
-@online{MinimumSecurityMeasures,
-  type = {MSM\_OES Tool},
-  title = {Minimum {{Security Measures}} for {{Operators}} of {{Essentials Services}}},
-  url = {https://www.enisa.europa.eu/topics/cybersecurity-policy/nis-directive-new/minimum-security-measures-for-operators-of-essentials-services},
-  urldate = {2023-03-16},
-  langid = {english},
-  organization = {{ENISA}},
-  file = {/Users/werner/Zotero/storage/VKIMAL5X/minimum-security-measures-for-operators-of-essentials-services.html}
-}
-
 @report{Niemann2021abgrenzung,
   title = {Abgrenzung Der {{IT-Sicherheitsnormenreihen ISO}} 27000 Und {{IEC}} 62443: Eine Sicht Auf Automatisierungstechnische Anlagen Der Fertigungs-Und Prozessindustrie},
   author = {Niemann, Karl-Heinz},
@@ -347,6 +337,17 @@
   url = {https://ec.europa.eu/information_society/newsroom/image/document/2018-30/reference_document_security_measures_0040C183-FF20-ECC4-A3D11FA2A80DAAC6_53643.pdf},
   urldate = {2023-03-14},
   file = {/Users/werner/Zotero/storage/D8IQKJLE/reference_document_security_measures_0040C183-FF20-ECC4-A3D11FA2A80DAAC6_53643.pdf}
+}
+
+@online{niscooperationgroupMinimumSecurityMeasures,
+  type = {MSM\_OES Tool},
+  title = {Minimum {{Security Measures}} for {{Operators}} of {{Essentials Services}}},
+  author = {NIS Cooperation Group},
+  url = {https://www.enisa.europa.eu/topics/cybersecurity-policy/nis-directive-new/minimum-security-measures-for-operators-of-essentials-services},
+  urldate = {2023-03-16},
+  langid = {english},
+  organization = {{ENISA}},
+  file = {/Users/werner/Zotero/storage/VKIMAL5X/minimum-security-measures-for-operators-of-essentials-services.html}
 }
 
 @misc{OEISHB,
