BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -446,6 +446,15 @@
   file = {/Users/werner/Zotero/storage/GFCSCWVI/Roy - 2020 - A High-Level Comparison between the NIST Cyber Sec.pdf}
 }
 
+@online{unternehmensberatung35DSGVODatenschutzGrundverordnung,
+  title = {§ 35 DSGVO (Datenschutz-Grundverordnung) - JUSLINE Österreich},
+  author = {Unternehmensberatung, ADVOKAT},
+  url = {https://www.jusline.at/gesetz/dsgvo/paragraf/35},
+  urldate = {2023-03-17},
+  abstract = {Artikel 35 Datenschutz-Folgenabschätzung - Datenschutz-Grundverordnung - Gesetz, Kommentar und Diskussionsbeiträge - JUSLINE Österreich},
+  langid = {ngerman}
+}
+
 @incollection{venable_DSR_ComprehensiveFrameworkEvaluation2012,
   title = {A {{Comprehensive Framework}} for {{Evaluation}} in {{Design Science Research}}},
   booktitle = {Design {{Science Research}} in {{Information Systems}}. {{Advances}} in {{Theory}} and {{Practice}}},
