BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -452,7 +452,8 @@
   url = {https://www.jusline.at/gesetz/dsgvo/paragraf/35},
   urldate = {2023-03-17},
   abstract = {Artikel 35 Datenschutz-Folgenabschätzung - Datenschutz-Grundverordnung - Gesetz, Kommentar und Diskussionsbeiträge - JUSLINE Österreich},
-  langid = {ngerman}
+  langid = {ngerman},
+  file = {/Users/werner/Zotero/storage/VY4Q5TIK/35.html}
 }
 
 @incollection{venable_DSR_ComprehensiveFrameworkEvaluation2012,
