BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -421,6 +421,13 @@
   file = {/Users/werner/Zotero/storage/JUZYY3LB/GeltendeFassung.html}
 }
 
+@online{RISVerarbeitungsvorgangeFur,
+  title = {{{RIS}} - {{Verarbeitungsvorgänge}}, Für Die Eine {{Datenschutz-Folgenabschätzung}} Durchzuführen Ist - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 17.03.2023},
+  url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010375},
+  urldate = {2023-03-17},
+  file = {/Users/werner/Zotero/storage/BZS8HVY4/GeltendeFassung.html}
+}
+
 @online{RISVerordnungUber,
   title = {{{RIS}} - {{Verordnung}} Über Qualifizierte {{Stellen}} - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 20.02.2023},
   url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010733},
