BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -306,6 +306,12 @@
   file = {/Users/werner/Zotero/storage/9W54XG65/OENORM_EN_ISO_27799_2016_12_15.html}
 }
 
+@online{KonsolidierterTEXT32016R0679,
+  title = {Konsolidierter {{TEXT}}: {{32016R0679}} — {{DE}} — 04.05.2016},
+  url = {https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:02016R0679-20160504&from=DE},
+  urldate = {2023-03-17}
+}
+
 @misc{KSOE,
   title = {Cyber {{Risk Rating}} \& {{Cyber Trust Label}}, {{Schema Policy}} 2023 {{Version}} 3},
   author = {Kompetenzzentrum Sicheres Österreich and Cyber Trust Austria},
