BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -309,7 +309,8 @@
 @online{KonsolidierterTEXT32016R0679,
   title = {Konsolidierter {{TEXT}}: {{32016R0679}} — {{DE}} — 04.05.2016},
   url = {https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:02016R0679-20160504&from=DE},
-  urldate = {2023-03-17}
+  urldate = {2023-03-17},
+  file = {/Users/werner/Zotero/storage/ISUBLJEM/HTML.html}
 }
 
 @misc{KSOE,
