BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -108,6 +108,13 @@
   file = {/Users/werner/Zotero/storage/XKMFT8R8/Drivas et al. - 2020 - A NIS Directive Compliant Cybersecurity Maturity A.pdf}
 }
 
+@online{DSGVO,
+  title = {Konsolidierter {{TEXT}}: {{32016R0679}} — {{DE}} — 04.05.2016},
+  url = {https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:02016R0679-20160504&from=DE},
+  urldate = {2023-03-17},
+  file = {/Users/werner/Zotero/storage/ISUBLJEM/HTML.html}
+}
+
 @misc{EN50600-1,
   title = {{{EN}} 50600-1:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Allgemeine Konzepte}}},
   author = {Technisches Komitee CLC/TC 215 "Elektrotechnische Aspekte von Telekommunikationseinrichtungen"},
@@ -304,13 +311,6 @@
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/588816/OENORM_EN_ISO_27799_2016_12_15},
   urldate = {2023-02-22},
   file = {/Users/werner/Zotero/storage/9W54XG65/OENORM_EN_ISO_27799_2016_12_15.html}
-}
-
-@online{KonsolidierterTEXT32016R0679,
-  title = {Konsolidierter {{TEXT}}: {{32016R0679}} — {{DE}} — 04.05.2016},
-  url = {https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:02016R0679-20160504&from=DE},
-  urldate = {2023-03-17},
-  file = {/Users/werner/Zotero/storage/ISUBLJEM/HTML.html}
 }
 
 @misc{KSOE,
