BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -109,7 +109,7 @@
 }
 
 @online{DSGVO,
-  title = {Konsolidierter {{TEXT}}: {{32016R0679}} — {{DE}} — 04.05.2016},
+  title = {{{VERORDNUNG}} ({{EU}}) 2016/679 {{DES EUROPÄISCHEN PARLAMENTS UND DES RATES}} Vom 27. {{April}} 2016 Zum {{Schutz}} Natürlicher {{Personen}} Bei Der {{Verarbeitung}} Personenbezogener {{Daten}}, Zum Freien {{Datenverkehr}} Und Zur {{Aufhebung}} Der {{Richtlinie}} 95/46/{{EG}} ({{Datenschutz-Grundverordnung}})},
   url = {https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:02016R0679-20160504&from=DE},
   urldate = {2023-03-17},
   file = {/Users/werner/Zotero/storage/ISUBLJEM/HTML.html}
@@ -458,6 +458,22 @@
   isbn = {978-1-72814-362-0},
   langid = {english},
   file = {/Users/werner/Zotero/storage/GFCSCWVI/Roy - 2020 - A High-Level Comparison between the NIST Cyber Sec.pdf}
+}
+
+@article{universityofcaliforniairvineusaBoundaryObjectsDesign2007,
+  title = {Boundary {{Objects}} in {{Design}}: {{An Ecological View}} of {{Design Artifacts}}},
+  shorttitle = {Boundary {{Objects}} in {{Design}}},
+  author = {{University of California, Irvine, USA} and Mark, Gloria and Lyytinen, Kalle and {Case Western Reserve University, USA} and Bergman, Mark and {Naval Postgraduate School}},
+  date = {2007-11},
+  journaltitle = {Journal of the Association for Information Systems},
+  shortjournal = {JAIS},
+  volume = {8},
+  number = {11},
+  pages = {546--568},
+  issn = {15369323},
+  doi = {10.17705/1jais.00144},
+  url = {https://aisel.aisnet.org/jais/vol8/iss11/34/},
+  urldate = {2023-03-20}
 }
 
 @online{unternehmensberatung35DSGVODatenschutzGrundverordnung,
