BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -473,7 +473,8 @@
   issn = {15369323},
   doi = {10.17705/1jais.00144},
   url = {https://aisel.aisnet.org/jais/vol8/iss11/34/},
-  urldate = {2023-03-20}
+  urldate = {2023-03-20},
+  file = {/Users/werner/Zotero/storage/WD4DWP2J/University of California, Irvine, USA et al. - 2007 - Boundary Objects in Design An Ecological View of .pdf}
 }
 
 @online{unternehmensberatung35DSGVODatenschutzGrundverordnung,
