--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -19,7 +19,7 @@
 @article{BERG_DSR_BoundaryObjectsDesign2007,
   title = {Boundary {{Objects}} in {{Design}}: {{An Ecological View}} of {{Design Artifacts}}},
   shorttitle = {Boundary {{Objects}} in {{Design}}},
-  author = {{University of California, Irvine, USA} and Mark, Gloria and Lyytinen, Kalle and {Case Western Reserve University, USA} and Bergman, Mark and {Naval Postgraduate School}},
+  author = {Mark, Gloria and Lyytinen, Kalle and {Case Western Reserve University, USA} and Bergman, Mark and {Naval Postgraduate School}},
   date = {2007-11},
   journaltitle = {Journal of the Association for Information Systems},
   shortjournal = {JAIS},
