BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -347,6 +347,23 @@
   file = {/Users/werner/Zotero/storage/ALNQPXJN/cyber-trust-austria.html}
 }
 
+@article{luFrameworkEffectiveCommercial1998,
+  title = {A Framework for Effective Commercial {{Web}} Application Development},
+  author = {Lu, Ming‐te and Yeung, Wing‐lok},
+  date = {1998-05-01},
+  journaltitle = {Internet Research},
+  volume = {8},
+  number = {2},
+  pages = {166--173},
+  issn = {1066-2243},
+  doi = {10.1108/10662249810211638},
+  url = {https://www.emerald.com/insight/content/doi/10.1108/10662249810211638/full/html},
+  urldate = {2023-03-20},
+  abstract = {The World Wide Web (WWW) or the Web has been recognized as a powerful new information exchange channel in recent years. Today, an ever‐increasing number of businesses have set up Web sites to publicize their products and services. However, careful planning and preparation is needed to achieve the intended purpose of this new information exchange channel. This paper proposes a comprehensive framework for effective commercial Web application development based on prior research in hypermedia and human‐computer interfaces. The framework regards Web application development as a special type of software development project. At the onset of the project, its social acceptability is investigated. Next, economic, technical, operational, and organizational viability are examined. For Web page design, both the functionality and usability of Web pages are thoroughly considered. The use of the framework should result in more effective commercial Web application development.},
+  langid = {english},
+  file = {/Users/werner/Zotero/storage/637PXELZ/Lu and Yeung - 1998 - A framework for effective commercial Web applicati.pdf}
+}
+
 @report{Niemann2021abgrenzung,
   title = {Abgrenzung Der {{IT-Sicherheitsnormenreihen ISO}} 27000 Und {{IEC}} 62443: Eine Sicht Auf Automatisierungstechnische Anlagen Der Fertigungs-Und Prozessindustrie},
   author = {Niemann, Karl-Heinz},
