--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -409,6 +409,12 @@
   file = {/Users/werner/Zotero/storage/ECB772EW/OENORM_A_7700-4_2019_10_01.html}
 }
 
+@online{ONORMISO19011,
+  title = {{{ÖNORM EN ISO}} 19011:2018 11 01 - {{Lesesaal}} - {{Austrian Standards}}},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/644436/OENORM_EN_ISO_19011_2018_11_01},
+  urldate = {2023-03-22}
+}
+
 @article{PEF_DSR_peffersDesignScienceResearch2007,
   title = {A Design Science Research Methodology for Information Systems Research},
   author = {Peffers, Ken and Tuunanen, Tuure and Rothenberger, Marcus and Chatterjee, S.},
