BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -264,6 +264,13 @@
   file = {/Users/werner/Zotero/storage/A4PXYWWD/ISOIECIEEE International Standard - Systems and software engineering--Vocabulary.pdf}
 }
 
+@online{ISO19011,
+  title = {{{ÖNORM EN ISO}} 19011:2018 11 01 - {{Lesesaal}} - {{Austrian Standards}}},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/644436/OENORM_EN_ISO_19011_2018_11_01},
+  urldate = {2023-03-22},
+  file = {/Users/werner/Zotero/storage/HXCY9CNQ/OENORM_EN_ISO_19011_2018_11_01.html}
+}
+
 @online{ISO27000,
   title = {{{EN ISO}}/{{IEC}} 27000:2020, {{Informationstechnik}} - {{Sicherheitsverfahren}}, {{Informationssicherheitsmanagementsysteme}} - {{Überblick}} Und {{Terminologie}}},
   author = {ISO - International Organization for Standardization and IEC - International Electrotechnical Commission},
@@ -407,12 +414,6 @@
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/662999/OENORM_A_7700-4_2019_10_01},
   urldate = {2023-02-26},
   file = {/Users/werner/Zotero/storage/ECB772EW/OENORM_A_7700-4_2019_10_01.html}
-}
-
-@online{ONORMISO19011,
-  title = {{{ÖNORM EN ISO}} 19011:2018 11 01 - {{Lesesaal}} - {{Austrian Standards}}},
-  url = {https://lesesaal.austrian-standards.at/action/de/private/details/644436/OENORM_EN_ISO_19011_2018_11_01},
-  urldate = {2023-03-22}
 }
 
 @article{PEF_DSR_peffersDesignScienceResearch2007,
