BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -266,6 +266,7 @@
 
 @online{ISO19011,
   title = {{{ÖNORM EN ISO}} 19011:2018 11 01 - {{Lesesaal}} - {{Austrian Standards}}},
+  author = {ISO - International Organization for Standardization},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/644436/OENORM_EN_ISO_19011_2018_11_01},
   urldate = {2023-03-22},
   file = {/Users/werner/Zotero/storage/HXCY9CNQ/OENORM_EN_ISO_19011_2018_11_01.html}
