BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -265,7 +265,7 @@
 }
 
 @online{ISO19011,
-  title = {{{ÖNORM EN ISO}} 19011:2018 11 01 - {{Lesesaal}} - {{Austrian Standards}}},
+  title = {{{ÖNORM EN ISO}} 19011:2018 - {{Leitfaden}} Zur {{Auditierung}} von {{Managementsystemen}}},
   author = {ISO - International Organization for Standardization and IEC - International Electrotechnical Commission},
   date = {2018},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/644436/OENORM_EN_ISO_19011_2018_11_01},
