BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -294,6 +294,7 @@
 
 @online{ISO27001Web,
   title = {{{ISO}} - {{ISO}}/{{IEC}} 27001 and Related Standards — {{Information}} Security Management},
+  author = {ISO - International Organization for Standardization},
   date = {2023-02-02},
   url = {https://www.iso.org/isoiec-27001-information-security.html},
   urldate = {2023-02-22},
