BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -350,7 +350,7 @@
 
 @online{KSOE_WEB,
   title = {Cyber Trust Austria - Kompetenzzentrum Sicheres Österreich},
-  author = {{r}},
+  author = {Kompetenzzentrum Sicheres Österreich},
   url = {https://kompetenzzentrum-sicheres-oesterreich.at/cyber-trust-austria/, https://kompetenzzentrum-sicheres-oesterreich.at/cyber-trust-austria/},
   urldate = {2023-03-01},
   langid = {ngerman},
