--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -134,7 +134,7 @@
 
 @misc{EN50600-1,
   title = {{{EN}} 50600-1:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Allgemeine Konzepte}}},
-  author = {Technisches Komitee CLC/TC 215 "Elektrotechnische Aspekte von Telekommunikationseinrichtungen"},
+  author = {OVE Österreichischer Verband für Elektortechnik},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/661527/OVE_EN_50600-1_2019_09_01},
   urldate = {2023-02-26},
   file = {/Users/werner/Zotero/storage/3LD9V5C6/OVE_EN_50600-1_2019_09_01.html}
