--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -142,7 +142,7 @@
 
 @misc{EN50600-2-1,
   title = {{{EN}} 50600-2-1:2021; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-1: {{Gebäudekonstruktion}}},
-  author = {Technisches Komitee CLC/TC 215 "Elektrotechnische Aspekte von Telekommunikationseinrichtungen"},
+  author = {OVE Österreichischer Verband für Elektortechnik},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/707113/OVE_EN_50600-2-1_2021_10_01},
   urldate = {2023-02-26},
   file = {/Users/werner/Zotero/storage/84XZGBY4/OVE_EN_50600-2-1_2021_10_01.html}
