BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -150,7 +150,7 @@
 
 @misc{EN50600-2-2,
   title = {{{EN}} 50600-2-2:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-2: {{Stromversorgung}} Und {{Stromverteilung}}},
-  author = {Technisches Komitee CLC/TC 215 "Elektrotechnische Aspekte von Telekommunikationseinrichtungen"},
+  author = {OVE Österreichischer Verband für Elektortechnik},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/661528/OVE_EN_50600-2-2_2019_09_01},
   urldate = {2023-02-26},
   file = {/Users/werner/Zotero/storage/FT7VESTX/OVE_EN_50600-2-2_2019_09_01.html}
@@ -158,7 +158,7 @@
 
 @misc{EN50600-2-3,
   title = {{{EN}} 50600-2-3:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-3: {{Regelung}} Der {{Umgebungsbedingungen}}},
-  author = {Technisches Komitee CLC/TC 215 "Elektrotechnische Aspekte von Telekommunikationseinrichtungen"},
+  author = {OVE Österreichischer Verband für Elektortechnik},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/661517/OVE_EN_50600-2-3_2019_09_01},
   urldate = {2023-02-26},
   file = {/Users/werner/Zotero/storage/EAD2DP3A/OVE_EN_50600-2-3_2019_09_01.html}
