BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -132,14 +132,6 @@
   file = {/Users/werner/Zotero/storage/ISUBLJEM/HTML.html}
 }
 
-@misc{EN50600-1,
-  title = {{{EN}} 50600-1:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Allgemeine Konzepte}}},
-  author = {OVE Österreichischer Verband für Elektortechnik},
-  url = {https://lesesaal.austrian-standards.at/action/de/private/details/661527/OVE_EN_50600-1_2019_09_01},
-  urldate = {2023-02-26},
-  file = {/Users/werner/Zotero/storage/3LD9V5C6/OVE_EN_50600-1_2019_09_01.html}
-}
-
 @misc{EN50600-2-1,
   title = {{{EN}} 50600-2-1:2021; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-1: {{Gebäudekonstruktion}}},
   author = {OVE Österreichischer Verband für Elektortechnik},
@@ -417,6 +409,14 @@
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/662999/OENORM_A_7700-4_2019_10_01},
   urldate = {2023-02-26},
   file = {/Users/werner/Zotero/storage/ECB772EW/OENORM_A_7700-4_2019_10_01.html}
+}
+
+@misc{OVE_EN50600-1,
+  title = {{{EN}} 50600-1:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Allgemeine Konzepte}}},
+  author = {OVE Österreichischer Verband für Elektortechnik},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/661527/OVE_EN_50600-1_2019_09_01},
+  urldate = {2023-02-26},
+  file = {/Users/werner/Zotero/storage/3LD9V5C6/OVE_EN_50600-1_2019_09_01.html}
 }
 
 @article{PEF_DSR_peffersDesignScienceResearch2007,
