--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -132,14 +132,6 @@
   file = {/Users/werner/Zotero/storage/ISUBLJEM/HTML.html}
 }
 
-@misc{EN50600-2-2,
-  title = {{{EN}} 50600-2-2:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-2: {{Stromversorgung}} Und {{Stromverteilung}}},
-  author = {OVE Österreichischer Verband für Elektortechnik},
-  url = {https://lesesaal.austrian-standards.at/action/de/private/details/661528/OVE_EN_50600-2-2_2019_09_01},
-  urldate = {2023-02-26},
-  file = {/Users/werner/Zotero/storage/FT7VESTX/OVE_EN_50600-2-2_2019_09_01.html}
-}
-
 @misc{EN50600-2-3,
   title = {{{EN}} 50600-2-3:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-3: {{Regelung}} Der {{Umgebungsbedingungen}}},
   author = {OVE Österreichischer Verband für Elektortechnik},
@@ -417,6 +409,14 @@
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/707113/OVE_EN_50600-2-1_2021_10_01},
   urldate = {2023-02-26},
   file = {/Users/werner/Zotero/storage/84XZGBY4/OVE_EN_50600-2-1_2021_10_01.html}
+}
+
+@misc{OVE_EN50600-2-2,
+  title = {{{EN}} 50600-2-2:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-2: {{Stromversorgung}} Und {{Stromverteilung}}},
+  author = {OVE Österreichischer Verband für Elektortechnik},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/661528/OVE_EN_50600-2-2_2019_09_01},
+  urldate = {2023-02-26},
+  file = {/Users/werner/Zotero/storage/FT7VESTX/OVE_EN_50600-2-2_2019_09_01.html}
 }
 
 @article{PEF_DSR_peffersDesignScienceResearch2007,
