--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -132,14 +132,6 @@
   file = {/Users/werner/Zotero/storage/ISUBLJEM/HTML.html}
 }
 
-@misc{EN50600-2-5,
-  title = {{{EN}} 50600-2-5:2021; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-5: {{Sicherungssysteme}}},
-  author = {OVE Österreichischer Verband für Elektortechnik},
-  url = {https://lesesaal.austrian-standards.at/action/de/private/details/707112/OVE_EN_50600-2-5_2021_10_01},
-  urldate = {2023-02-26},
-  file = {/Users/werner/Zotero/storage/HDY83NGQ/OVE_EN_50600-2-5_2021_10_01.html}
-}
-
 @online{ENISA_GuidelinesAssessingOES,
   type = {Report/Study},
   title = {Guidelines on Assessing {{DSP}} Security and {{OES}} Compliance with the {{NISD}} Security Requirements},
@@ -417,6 +409,14 @@
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/547549/OEVE_OENORM_EN_50600-2-4_2015_08_01},
   urldate = {2023-02-26},
   file = {/Users/werner/Zotero/storage/NQ46JRRH/OEVE_OENORM_EN_50600-2-4_2015_08_01.html}
+}
+
+@misc{OVE_EN50600-2-5,
+  title = {{{EN}} 50600-2-5:2021; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-5: {{Sicherungssysteme}}},
+  author = {OVE Österreichischer Verband für Elektortechnik},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/707112/OVE_EN_50600-2-5_2021_10_01},
+  urldate = {2023-02-26},
+  file = {/Users/werner/Zotero/storage/HDY83NGQ/OVE_EN_50600-2-5_2021_10_01.html}
 }
 
 @article{PEF_DSR_peffersDesignScienceResearch2007,
